--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /Clase9/build/
 /Clase10/nbproject/private/
 /Clase10/build/
+/ManejoArchivos/nbproject/private/
+/Taller2/nbproject/private/
+/Taller2/build/
+/Clase15/nbproject/private/
+/Clase15/build/
