Trabajo Final AVANCE 1.1 java :coffee:

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 /Taller2/build/
 /Clase15/nbproject/private/
 /Clase15/build/
+/Proyecto_SegundoB/nbproject/private/
+/Proyecto_SegundoB/build/
+/ManejoColecciones/nbproject/private/
+/ManejoColecciones/build/
